--- a/package.json
+++ b/package.json
@@ -5,18 +5,36 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^3.13.1",
+    "babel-plugin-styled-components": "^1.13.2",
+    "classnames": "^2.3.1",
+    "gatsby": "^3.14.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-canonical-urls": "^3.14.0",
+    "gatsby-plugin-google-analytics": "^3.14.0",
     "gatsby-plugin-image": "^1.13.0",
-    "gatsby-plugin-manifest": "^3.13.0",
-    "gatsby-plugin-offline": "^4.13.0",
-    "gatsby-plugin-react-helmet": "^4.13.0",
-    "gatsby-plugin-sharp": "^3.13.0",
-    "gatsby-source-filesystem": "^3.13.0",
-    "gatsby-transformer-sharp": "^3.13.0",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-offline": "^4.14.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-sharp": "^3.14.0",
+    "gatsby-plugin-styled-components": "^4.14.0",
+    "gatsby-plugin-typescript": "^3.14.0",
+    "gatsby-remark-autolink-headers": "^4.11.0",
+    "gatsby-remark-copy-linked-files": "^4.11.0",
+    "gatsby-remark-images": "^5.11.0",
+    "gatsby-remark-prismjs": "^5.11.0",
+    "gatsby-remark-responsive-iframe": "^4.11.0",
+    "gatsby-remark-smartypants": "^4.11.0",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-json": "^3.14.0",
+    "gatsby-transformer-remark": "^4.11.0",
+    "gatsby-transformer-sharp": "^3.14.0",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.25.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.1",
@@ -24,7 +42,8 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "typescript": "^4.4.3"
   },
   "keywords": [
     "gatsby"
