Add styles, components, pages and templates

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@types/react-helmet": "^6.1.2",
     "babel-plugin-styled-components": "^1.13.2",
     "classnames": "^2.3.1",
     "gatsby": "^3.14.0",
