--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-remark-prismjs": "^5.11.0",
     "gatsby-remark-responsive-iframe": "^4.11.0",
     "gatsby-remark-smartypants": "^4.11.0",
+    "gatsby-remark-tufte": "^1.0.6",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-json": "^3.14.0",
     "gatsby-transformer-remark": "^4.11.0",
