--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "acozy-space",
+  "name": "gatsby-starter-default",
   "private": true,
-  "description": "My personal website",
+  "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Janice Lee <janice.lee@pomona.edu>",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@types/react-helmet": "^6.1.2",
     "babel-plugin-styled-components": "^1.13.2",
@@ -36,7 +36,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "remark-parse": "^10.0.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
@@ -45,7 +44,6 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "gh-pages": "^3.2.3",
     "prettier": "^2.3.2",
     "typescript": "^4.4.3"
   },
@@ -60,8 +58,7 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy": "gatsby build && gh-pages -d public -b main"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
     "type": "git",
