--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "version": "0.1.0",
   "author": "Janice Lee <janice.lee@pomona.edu>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@types/react-helmet": "^6.1.2",
     "babel-plugin-styled-components": "^1.13.2",
     "classnames": "^2.3.1",
     "gatsby": "^3.14.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-canonical-urls": "^3.14.0",
+    "gatsby-plugin-feed-mdx": "^1.1.0",
     "gatsby-plugin-google-analytics": "^3.14.0",
     "gatsby-plugin-image": "^1.13.0",
     "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-offline": "^4.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sharp": "^3.14.0",
