--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@tufte-markdown/parser": "^2.0.1",
     "@types/react-helmet": "^6.1.2",
     "babel-plugin-styled-components": "^1.13.2",
     "classnames": "^2.3.1",
