--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-transformer-json": "^3.14.0",
     "gatsby-transformer-remark": "^4.11.0",
     "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-transformer-yaml": "^3.14.0",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.25.0",
     "prop-types": "^15.7.2",
