Fix number of entries on year page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Breon",
         "Bürstner",
         "Fräulein",
+        "frontmatter",
         "Grubach",
         "lastupdated",
         "liminality"
