fixed the quotes i'm gonna cry tears of joy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,16 @@
 {
     "cSpell.words": [
+        "booknote",
         "booknotes",
         "Breon",
         "Bürstner",
+        "chapternum",
+        "chaptertitle",
         "Fräulein",
         "frontmatter",
         "Grubach",
         "lastupdated",
-        "liminality"
+        "liminality",
+        "pagenum"
     ]
 }
