--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby": "^3.14.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-canonical-urls": "^3.14.0",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-feed-mdx": "^1.1.0",
     "gatsby-plugin-google-analytics": "^3.14.0",
     "gatsby-plugin-image": "^1.13.0",
@@ -30,7 +31,7 @@
     "gatsby-remark-prismjs": "^5.11.0",
     "gatsby-remark-responsive-iframe": "^4.11.0",
     "gatsby-remark-smartypants": "^4.11.0",
-    "gatsby-remark-tufte": "^1.0.6",
+    "gatsby-remark-tufte": "github:zygar/gatsby-remark-tufte",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-json": "^3.14.0",
     "gatsby-transformer-remark": "^4.11.0",
