--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "gatsby-plugin-canonical-urls": "^3.14.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-feed-mdx": "^1.1.0",
-    "gatsby-plugin-google-analytics": "^3.14.0",
     "gatsby-plugin-image": "^1.13.0",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-mdx": "^2.14.0",
@@ -43,6 +42,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-is": "^18.0.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
