--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "gatsby-plugin-goatcounter": "^0.4.0",
     "prettier": "^2.3.2",
     "typescript": "^4.4.3"
   },
