--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "gatsby-plugin-goatcounter": "^0.4.0",
     "gh-pages": "^3.2.3",
-    "prettier": "^2.3.2",
+    "prettier": "2.6.2",
     "typescript": "^4.4.3"
   },
   "keywords": [
