--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "babel-plugin-styled-components": "^1.13.2",
     "classnames": "^2.3.1",
     "gatsby": "^3.14.0",
-    "gatsby-image": "^3.11.0",
     "gatsby-plugin-canonical-urls": "^3.14.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-feed-mdx": "^1.1.0",
@@ -39,8 +38,8 @@
     "prism-themes": "^1.9.0",
     "prismjs": "^1.25.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-is": "^18.0.0",
     "styled-components": "^5.3.1"
@@ -63,7 +62,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,yaml}\"",
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
