--- a/package.json
+++ b/package.json
@@ -5,36 +5,38 @@
   "version": "0.1.0",
   "author": "Janice Lee <janice.lee@pomona.edu>",
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/mdx": "^2.1.1",
+    "@mdx-js/react": "^2.1.1",
     "@tufte-markdown/parser": "^2.0.1",
     "@types/react-helmet": "^6.1.2",
-    "babel-plugin-styled-components": "^1.13.2",
+    "babel-plugin-styled-components": "^2.0.7",
     "classnames": "^2.3.1",
-    "gatsby": "^3.14.0",
-    "gatsby-plugin-canonical-urls": "^3.14.0",
+    "gatsby": "^4.13.1",
+    "gatsby-plugin-canonical-urls": "^4.13.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-feed-mdx": "^1.1.0",
-    "gatsby-plugin-image": "^1.13.0",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-offline": "^4.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
-    "gatsby-plugin-sharp": "^3.14.0",
-    "gatsby-plugin-styled-components": "^4.14.0",
-    "gatsby-plugin-typescript": "^3.14.0",
-    "gatsby-remark-autolink-headers": "^4.11.0",
-    "gatsby-remark-copy-linked-files": "^4.11.0",
-    "gatsby-remark-images": "^5.11.0",
-    "gatsby-remark-prismjs": "^5.11.0",
-    "gatsby-remark-responsive-iframe": "^4.11.0",
-    "gatsby-remark-smartypants": "^4.11.0",
+    "gatsby-plugin-image": "^2.13.0",
+    "gatsby-plugin-manifest": "^4.13.0",
+    "gatsby-plugin-mdx": "^3.13.0",
+    "gatsby-plugin-offline": "^5.13.0",
+    "gatsby-plugin-react-helmet": "^5.13.0",
+    "gatsby-plugin-sharp": "^4.13.0",
+    "gatsby-plugin-styled-components": "^5.13.0",
+    "gatsby-plugin-typescript": "^4.13.0",
+    "gatsby-remark-autolink-headers": "^5.13.0",
+    "gatsby-remark-copy-linked-files": "^5.13.0",
+    "gatsby-remark-images": "^6.13.0",
+    "gatsby-remark-prismjs": "^6.13.0",
+    "gatsby-remark-responsive-iframe": "^5.13.0",
+    "gatsby-remark-smartypants": "^5.13.0",
     "gatsby-remark-tufte": "github:zygar/gatsby-remark-tufte",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-transformer-json": "^3.14.0",
-    "gatsby-transformer-remark": "^4.11.0",
-    "gatsby-transformer-sharp": "^3.14.0",
-    "gatsby-transformer-yaml": "^3.14.0",
+    "gatsby-source-filesystem": "^4.13.0",
+    "gatsby-transformer-json": "^4.13.0",
+    "gatsby-transformer-remark": "^5.13.0",
+    "gatsby-transformer-sharp": "^4.13.0",
+    "gatsby-transformer-yaml": "^4.13.0",
+    "install": "^0.13.0",
+    "npm": "^8.9.0",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.25.0",
     "prop-types": "^15.7.2",
@@ -45,9 +47,9 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "eslint": "^7.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "gatsby-plugin-goatcounter": "^0.4.0",
