--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Janice Lee <janice.lee@pomona.edu>",
   "dependencies": {
+    "@babel/core": "^7.17.10",
     "@mdx-js/mdx": "^2.1.1",
     "@mdx-js/react": "^2.1.1",
     "@tufte-markdown/parser": "^2.0.1",
@@ -17,7 +18,6 @@
     "gatsby-plugin-feed-mdx": "^1.1.0",
     "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-manifest": "^4.13.0",
-    "gatsby-plugin-mdx": "^3.13.0",
     "gatsby-plugin-offline": "^5.13.0",
     "gatsby-plugin-react-helmet": "^5.13.0",
     "gatsby-plugin-sharp": "^4.13.0",
@@ -26,6 +26,7 @@
     "gatsby-remark-autolink-headers": "^5.13.0",
     "gatsby-remark-copy-linked-files": "^5.13.0",
     "gatsby-remark-images": "^6.13.0",
+    "gatsby-remark-katex": "^6.13.0",
     "gatsby-remark-prismjs": "^6.13.0",
     "gatsby-remark-responsive-iframe": "^5.13.0",
     "gatsby-remark-smartypants": "^5.13.0",
@@ -36,6 +37,7 @@
     "gatsby-transformer-sharp": "^4.13.0",
     "gatsby-transformer-yaml": "^4.13.0",
     "install": "^0.13.0",
+    "katex": "^0.15.3",
     "npm": "^8.9.0",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.25.0",
