--- a/src/data/quotes/books/religion/hahn-thich-nhat-the-miracle-of-mindfulness.yaml
+++ b/src/data/quotes/books/religion/hahn-thich-nhat-the-miracle-of-mindfulness.yaml
@@ -4,7 +4,7 @@ type: religion
 quotes: 
   - item:
     quote: >
-      Drink your tea slowly and reverently, as if it is the axis on which the whole earth revolves -- 
+      Drink your tea slowly and reverently, as if it is the axis on which the whole earth revolves —
       slowly, evenly, without rushing towards the future. Live the actual moment. Only this actual moment is life.
     description: On truly living life
     chapter_title: A Day of Mindfulness
