--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Bürstner",
         "chapternum",
         "chaptertitle",
+        "chokehold",
         "Fräulein",
         "frontmatter",
         "Grubach",
