--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-is": "^18.0.0",
+    "remark-wiki-link": "^1.0.4",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
